<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="false"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.dm73.plainpress.SignActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/login_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in"
            android:layout_marginTop="35dp"
            android:text="@string/log_in"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="32sp"/>

        <ImageView
            android:id="@+id/logo_card"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_sign"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/background_input"
            android:gravity="center_vertical"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="12sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/background_input"
            android:gravity="center_vertical"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="12sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password_link"
            android:textColor="@color/colorText" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/log_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:textSize="32sp"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_sign"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/emailFieldSingUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/background_input"
            android:gravity="center_vertical"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="12sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <EditText
            android:id="@+id/passwordFieldSingUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/background_input"
            android:gravity="center_vertical"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="12sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <EditText
            android:id="@+id/verificationPasswordFieldSingUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/background_input"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password_placeholder"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:textSize="12sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:text="sign up"
            android:textSize="15sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

    </LinearLayout>

    <View
        android:id="@+id/animation_first_arist"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="0dp"
        android:background="#c0ca33"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#fff"
        android:gravity="end">

        <View
            android:id="@+id/animation_square"
            android:layout_width="00dp"
            android:layout_height="80dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:background="#3e2723"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:id="@+id/animation_second_arist"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="0dp"
        android:background="#d50000"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/animation_circle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="82dp"
        android:visibility="gone"
        app:cardBackgroundColor="#5c6bc0"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp">

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="-175dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="showLogIn"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="35dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="27dp"
                android:paddingStart="60dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/or"
                    android:textColor="#5cffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_small_tv"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="#fff"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <FrameLayout
                android:id="@+id/FrameFb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button_facebook"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/custom_fb_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/facebook" />

            </FrameLayout>

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/instagram_icon"
                android:src="@drawable/google" />

            <FrameLayout
                android:id="@+id/FrameTwitter"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="15dp"
                android:visibility="gone">

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/button_twitter_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                <ImageButton
                    android:id="@+id/custom_twitter_button"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/twiter" />

            </FrameLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/singup_button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginEnd="-35dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="showSingUp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="35dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:id="@+id/singup_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="60dp"
                android:paddingStart="27dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/or"
                    android:textColor="#5cffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/singup_tv"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="15dp"
        android:visibility="gone"/>

</RelativeLayout>
